Ajout de l'interaction avec AI à chaque message recu